--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -25,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/animal_1"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="120dp"
             android:layout_marginLeft="16dp"
             android:textSize="60sp"
-            android:text="Bear"
+            android:text="Koala"
             />
     </RelativeLayout>
     <RelativeLayout
