--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -53,7 +53,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginLeft="16dp"
             android:textSize="60sp"
-            android:text="Bear"
+            android:text="Tiger"
             />
     </RelativeLayout>
 
